objects/Failed_Operation_Recovery__c.object
<CustomObject>
    <description>stores details of failed operations and resubmit for retry.
Currently capture error on the Order status update, but can be extended to other events.</description>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Retry_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Retry Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Failed Operation Recovery</label>
    <nameField>
        <displayFormat>FOR-{00000000}</displayFormat>
        <label>Failed Operation Recovery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failed Operation Recovery</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>